# os_kolk2

./: CMakeLists.txt  README.md  os_kolk2.cpp
include/: CreationPolicies.h  LifetimePolicies.h  Singleton.h  ThreadingPolicies.h
src/: example.cpp
test/: SingletonTest.cpp
